@@ -176,10 +176,15 @@ void
 init_cygheap::close_ctty ()
 {
   debug_printf ("closing cygheap->ctty %p", cygheap->ctty);
+  int usecount = cygheap->ctty->usecount;
   cygheap->ctty->close ();
   if (cygheap->ctty_on_hold == cygheap->ctty)
     cygheap->ctty_on_hold = NULL;
-  cygheap->ctty = NULL;
+  if (usecount == 1)
+    {
+      cygheap->ctty = NULL;
+      debug_printf ("setting cygheap->ctty to NULL");
+    }
 }
 
 #define pagetrunc(x) ((void *) (((DWORD) (x)) & ~(4096 - 1)))
